--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     gtag('config', 'G-JL74BF8R5Z');
   </script>
+  <meta name="msvalidate.01" content="59C1340AC2DA94D41085ECD4C18EB865" />
   <!-- Metadatos Básicos -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
